# task_manager_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: process_config.yaml  task_config.yaml
examples/: tkinter_basic_layout.py  urwid_widget.py
launch/: task_master_ros_node.launch  task_minion_ros_node.launch  test_node1.launch  test_node2.launch  test_nodes.launch
msg/: TaskCommand.msg  TaskConfig.msg  TaskConfigList.msg  TaskInfo.msg  TaskInfoList.msg
src/task_manager/: task_info_manager.py  task_manager_core.py  task_master.py  task_minion_controller.py  task_minion_model.py  task_minion_view.py
src/task_manager_ros/: task_manager_ros_utils.py  task_master_ros.py  task_minion_ros.py
src/task_master_ros/: task_master_ros.py  task_master_ros_node.py
src/task_minion/: task_minion.py  task_minion_controller.py  task_minion_model.py  task_minion_ros.py  task_minion_view.py
src/task_minion/task_minion_controller/: task_minion_controller.py
src/task_minion/task_minion_model/: task_minion_model.py
src/task_minion/task_minion_view/: task_minion_view.py
src/task_minion_ros/: task_minion_ros.py  task_minion_ros_node.py
src/test_nodes/: test_node1.py  test_node2.py  test_node3.py  test_process_ros.py
srv/: RegisterTask.srv
